настроил хедер и поправил цвета

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Body{
   background-color: white
 }
 body {
-	color: #8f8f8f;
+	color: #fff;
   font-style: roboto;
   background-color: white;
 	border-top: 5px solid #7e7e7e;
