--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-Body{
-  font-style: roboto;
-  background-color: white
-}
 body {
-	color: #fff;
+	color: #000;
   font-style: roboto;
   background-color: white;
 	border-top: 5px solid #7e7e7e;
