--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	color: #000;
-  font-style: roboto;
+  font-family: 'Roboto', sans-serif;
   background-color: white;
 	border-top: 5px solid #7e7e7e;
 	margin: 0;
