--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,25 @@
+body {
+    width: 1440px;
+    height: 2102px;
+    background: #FFFFFF;
+}
+
+.header {
+    width: 1440px;
+    height: 407px;
+    margin: 0 auto;
+}
+
 .title {
     display: flex;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #000000;
+}
+.logo {
+    width: 264.19px;
+    height: 208px;
 }
