--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
   background-color: white;
 	border-top: 5px solid #7e7e7e;
 	margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 img {
