--- a/css/benefits.css
+++ b/css/benefits.css
@@ -28,3 +28,27 @@ body {
     width: 264.19px;
     height: 208px;
 }
+
+.header-text{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 44px;
+    line-height: 52px;
+    text-align: center;
+    color: #000000;
+}
+.wrapper{
+    width: 1135px;
+    margin: 0 auto;
+    display: flex;
+}
+.content-text{
+    padding-left: 375px ;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 100%;
+    color: #858585;
+}
