--- a/style.css
+++ b/style.css
@@ -42,8 +42,7 @@ body {
 }
 
 .top-menu li.current_page_item {
-  box-shadow: 0 0 1px black;
-	color: #000 !important;
+
 }
 
 .top-menu a {
@@ -57,10 +56,22 @@ body {
 
 nav{
   margin: 0 auto;
-  max-width: 1220px
+	margin-top: 27px;
+	margin-bottom: 27px;
+  max-width: 1060px;
+	display:flex;
+	justify-content: space-between;
 }
 
 /* footer */
+
+.footer-wrapper{
+	width: 1060px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
 
 .nav-footer-colum{
   display: flex;
@@ -69,6 +80,8 @@ nav{
 
 ul{
   font-family: 'Roboto', sans-serif;
+	margin-left: -22px;
+	margin-top: 0;
 }
 
 h3{
@@ -76,14 +89,135 @@ h3{
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
-  margin-left: 25px;
 }
 
 li{
   list-style-type: none;
   margin-left: -15px;
+	margin-bottom: 7px;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 16px;
 }
 .nav-footer-colum a {
 	color: #000;
 	text-decoration: none;
+}
+
+
+.nav-footer-right{
+	align-self: flex-end;
+}
+
+/* Home page */
+
+.month-text{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 44px;
+    line-height: 52px;
+    text-align: center;
+    color: #000000;
+}
+.monrh-block{
+    width: 507px;
+    height: 504px;
+    margin: 0 auto;
+    background: #C4C4C4
+}
+.resent-show {
+    display: flex;
+		margin: 0 auto;
+    margin-top: 112px;
+    padding-left: 140px;
+		max-width: 1060px;
+
+}
+.text-header {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 56px;
+    color: #000000;
+		margin-top: -20px;
+}
+
+.content-month {
+    width: 175px;
+    height: 174px;
+    background: #C4C4C4;
+    margin-left: 76px;
+}
+.month {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    padding-top: 178px;
+    padding-left: 0;
+    position: absolute;
+}
+
+.author {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 28px;
+    color: #000000;
+    padding-left: 0;
+    position: absolute;
+    padding-top: 209px;
+}
+
+.monrh-blocks {
+    padding-left: 100px;
+    padding-right: 81px;
+}
+
+.take-part-block{
+    margin-top: 63px;
+    text-align: center;
+}
+.block-part {
+    width: 235px;
+    height: 235px;
+    margin: 0 auto;
+    background: #C4C4C4;
+}
+
+.next-block {
+    margin-top: 30px;
+}
+
+.gallery-post{
+	display: flex;
+	flex-direction: column-reverse;
+	margin-right: 45px;
+}
+
+.attachment-post-thumbnail{
+	width: 175px;
+	height: 175px;
+}
+
+.recent-show-post{
+	margin-left: 47px;
+	display: flex;
+	flex-direction: row;
+}
+
+.recent-show-post a{
+	color:black;
+	text-decoration: none;
+}
+
+.gallery-winner img{
+	width: 507px;
+	height: 507px;
 }
