--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav{
   margin: 0 auto;
 	margin-top: 27px;
 	margin-bottom: 27px;
-  max-width: 1060px;
+  max-width: 1200px;
 	display:flex;
 	justify-content: space-between;
 }
@@ -91,7 +91,7 @@ h3{
   font-size: 30px;
 }
 
-li{
+footer li{
   list-style-type: none;
   margin-left: -15px;
 	margin-bottom: 7px;
@@ -108,6 +108,24 @@ li{
 
 .nav-footer-right{
 	align-self: flex-end;
+}
+
+/* page */
+
+.wrapper{
+	width: 1060px;
+	margin: 0 auto;
+}
+
+h1{
+	margin-bottom: 32px;
+}
+
+.wrapper p, .wrapper li{
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 24px;
 }
 
 /* Home page */
@@ -220,4 +238,18 @@ li{
 .gallery-winner img{
 	width: 507px;
 	height: 507px;
+}
+
+/* Benefits */
+
+.Benefits{
+	margin-top: -74px;
+}
+
+.Benefits p, .Benefits li{
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 16px;
+	color: #858585;
 }
