--- a/style.css
+++ b/style.css
@@ -253,3 +253,73 @@ h1{
 	font-size: 16px;
 	color: #858585;
 }
+
+/* contact */
+
+.form{
+	width: 750px;
+	display: flex;
+	flex-direction: column;
+}
+
+.row{
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 10px;
+}
+
+.input{
+	display: flex;
+	flex-direction: column;
+}
+
+label{
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 21px;
+}
+
+#first-name, #last-name{
+	width: 335px;
+	height: 50px;
+	border-radius: 5px;
+	margin-right: 30px;
+	box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.25);
+	border: none;
+}
+
+#e-mail{
+	width: 700px;
+	height: 50px;
+	border-radius: 5px;
+	box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.25);
+	border: none;
+}
+
+#message{
+	width: 700px;
+	height: 200px;
+	resize: none;
+	border-radius: 5px;
+	box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.25);
+	border: none;
+}
+
+#submit{
+	margin-top: 10px;
+	width: 335px;
+	height: 50px;
+	border-radius: 5px;
+	background-color: black;
+	color: white;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 21px;
+	text-transform: uppercase;
+	box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.25);
+	border: none;
+}
