--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ body {
 /* Header */
 .logo{
   margin: 0 auto;
-  width: 265px;
+  width: 180px;
+}
+
+.logo img{
+	width: 180px;
 }
 
 .hr-header{
@@ -281,7 +285,7 @@ label{
 	line-height: 21px;
 }
 
-#first-name, #last-name{
+#first-name, #last-name, .short{
 	width: 335px;
 	height: 50px;
 	border-radius: 5px;
@@ -290,7 +294,7 @@ label{
 	border: none;
 }
 
-#e-mail{
+#e-mail, .long{
 	width: 700px;
 	height: 50px;
 	border-radius: 5px;
@@ -298,7 +302,7 @@ label{
 	border: none;
 }
 
-#message{
+#message, .message{
 	width: 700px;
 	height: 200px;
 	resize: none;
@@ -307,7 +311,7 @@ label{
 	border: none;
 }
 
-#submit{
+#submit, .submit{
 	margin-top: 10px;
 	width: 335px;
 	height: 50px;
